Refactor color handling; implement ColorService for managing name and stats colors